back to before the mess