@@ -25,11 +25,13 @@ import org.valkyrienskies.mod.common.config.VSConfig;
 import org.valkyrienskies.mod.common.physics.GreedyBlockMerger;
 import org.valkyrienskies.mod.common.physics.PhysicsUtils;
 import org.valkyrienskies.mod.common.physics.physx.IPhysicsBlockController;
+import org.valkyrienskies.mod.common.physics.physx.PhysXActor;
 import org.valkyrienskies.mod.common.physics.physx.PhysXActorUtil;
 import org.valkyrienskies.mod.common.physics.physx.PhysXCollisionFilters;
 import org.valkyrienskies.mod.common.physics.PhysicsCalculations;
 import org.valkyrienskies.mod.common.ships.ship_transform.ShipTransform;
 import org.valkyrienskies.mod.common.ships.ship_world.PhysicsObject;
+import physx.common.PxQuat;
 import physx.common.PxTransform;
 import physx.common.PxVec3;
 import physx.extensions.PxRigidBodyExt;
@@ -50,7 +52,7 @@ import java.util.*;
  * Information involving the ships collisions
  * todo: make interface and move most of the methods used here to there for when we get multiple physics engines
  * */
-public class PhysXShipBody extends AbstractPhysXCollisionObject {
+public class PhysXShipBody extends AbstractPhysXCollisionObject<PhysXShipBody.Identifier> {
     private static final int MAX_SHIP_SHAPES = 8192;
     private static final double WATER_DENSITY = 1000D;
     private static final double WATER_VERTICAL_DAMPING = 1800D;
@@ -60,11 +62,6 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
 
     @NotNull
     private PhysicsObject ship;
-    @NotNull
-    private final Identifier identifier;
-    @NotNull
-    private final PxRigidDynamic actor;
-    private final List<PxShape> shapes;
     private final Map<BlockPos, List<PxShape>> shapesByBlock;
     private final Map<PxShape, List<BlockPos>> blocksByShape;
     @NotNull
@@ -73,18 +70,25 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
     private boolean firstSync;
     private boolean centerOfMassPoseDirty;
     private boolean massPropertiesDirty;
-    private double lastMass;
+    private boolean massPropertiesInitialized;
+    private double lastAppliedMass;
 
     public PhysXShipBody(
-            @NotNull PxPhysics physics,
-            @NotNull PxScene scene,
-            @NotNull PxMaterial material,
-            @NonNull PhysicsObject ship
+            @NotNull PhysXShipBody.Identifier identifier, @NotNull PxPhysics physics, @NotNull PxScene scene,
+            @NotNull PxMaterial material, @NonNull PhysicsObject ship
     ) {
-        super(physics, scene);
+        super(identifier, physics, scene, () -> {
+            PxTransform transform = createActorPose(ship, ship.getShipTransformationManager().getCurrentPhysicsTransform());
+            PxRigidDynamic toReturn = physics.createRigidDynamic(transform);
+            transform.destroy();
+            setCenterOfMassPose(toReturn, ship, ship.getPhysicsCalculations().getPhysCenterOfMass());
+            toReturn.setRigidBodyFlag(PxRigidBodyFlagEnum.eENABLE_CCD, true);
+            toReturn.setSolverIterationCounts(8, 2);
+            toReturn.setMaxLinearVelocity((float) VSConfig.shipMaxSpeed);
+            toReturn.setMaxAngularVelocity((float) VSConfig.shipMaxAngularSpeed);
+            return toReturn;
+        });
         this.ship = ship;
-        this.identifier = new Identifier(ship);
-        this.shapes = new ArrayList<>();
         this.shapesByBlock = new HashMap<>();
         this.blocksByShape = new IdentityHashMap<>();
         this.material = material;
@@ -92,39 +96,13 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         this.firstSync = true;
         this.centerOfMassPoseDirty = false;
         this.massPropertiesDirty = true;
-        this.lastMass = Double.NaN;
-
-        PxTransform transform = this.createActorPose(ship.getShipTransformationManager().getCurrentPhysicsTransform());
-        this.actor = this.physics.createRigidDynamic(transform);
-        transform.destroy();
-        this.setCenterOfMassPose(ship.getPhysicsCalculations().getPhysCenterOfMass());
-        this.actor.setRigidBodyFlag(PxRigidBodyFlagEnum.eENABLE_CCD, true);
-        this.actor.setSolverIterationCounts(8, 2);
-        this.actor.setMaxLinearVelocity((float) VSConfig.shipMaxSpeed);
-        this.actor.setMaxAngularVelocity((float) VSConfig.shipMaxAngularSpeed);
-        this.scene.addActor(this.actor);
+        this.massPropertiesInitialized = false;
     }
 
     private void forcePose(ShipTransform transform) {
-        PxTransform pxTransform = this.createActorPose(transform);
+        PxTransform pxTransform = createActorPose(this.ship, transform);
         this.actor.setGlobalPose(pxTransform, true);
         pxTransform.destroy();
-    }
-
-    private PxTransform createActorPose(ShipTransform transform) {
-        Vector3d referencePosition = this.getReferencePositionInShipSpace();
-        transform.transformPosition(referencePosition, TransformType.SUBSPACE_TO_GLOBAL);
-        return PhysXActorUtil.toPxTransform(
-                referencePosition.x,
-                referencePosition.y,
-                referencePosition.z,
-                transform.rotationQuaternion(TransformType.SUBSPACE_TO_GLOBAL)
-        );
-    }
-
-    private Vector3d getReferencePositionInShipSpace() {
-        BlockPos reference = this.ship.getReferenceBlockPos();
-        return new Vector3d(reference.getX(), reference.getY(), reference.getZ());
     }
 
     @NotNull
@@ -136,18 +114,19 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         this.ship = ship;
     }
 
-    @Override
-    @NotNull
-    public Identifier getIdentifier() {
-        return this.identifier;
+    /**
+     * Copies the current PhysX actor pose. This must only be called by the physics
+     * thread, before or after scene simulation.
+     */
+    public void copyActorPose(@NotNull Vector3d positionDestination, @NotNull Quaterniond rotationDestination) {
+        PxTransform pose = this.actor.getGlobalPose();
+        positionDestination.set(PhysXActorUtil.fromPxVec(pose.getP()));
+        rotationDestination.set(PhysXActorUtil.fromPxQuat(pose.getQ()));
     }
 
-    public void updateBeforeSimulation(
-            @NotNull World hostWorld,
-            @NotNull List<PhysXBlockSectionBody> blockSectionsWithLiquids,
-            double timeStep
-    ) {
+    public void updateBeforeSimulation(@NotNull World hostWorld, @NotNull List<PhysXBlockSectionBody> blockSectionsWithLiquids, double timeStep) {
         PhysicsCalculations calculations = this.ship.getPhysicsCalculations();
+        PxRigidDynamic shipActor = (PxRigidDynamic) this.actor;
 
         //reset force state and record this simulation step length.
         calculations.resetForceAndTorque();
@@ -217,23 +196,20 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
                 );
                 transform.transformPosition(centerWorld, TransformType.SUBSPACE_TO_GLOBAL);
 
-                double waterSurfaceY = this.getWaterSurfaceY(hostWorld, mutablePos, centerWorld);
-                if (!Double.isNaN(waterSurfaceY)) {
-                    double submergedFraction = Math.clamp(waterSurfaceY - (centerWorld.y - BLOCK_HALF_EXTENT), 0D, 1D);
-                    if (submergedFraction > 0D) {
-                        Vector3d relativeToShipCenter = centerWorld.sub(
-                                new Vector3d(transform.getPosX(), transform.getPosY(), transform.getPosZ()),
-                                new Vector3d()
-                        );
-                        Vector3d velocityAtPoint = calculations.getVelocityAtPoint(relativeToShipCenter, new Vector3d());
-                        double lift = buoyancyForce * submergedFraction;
-                        Vector3d force = new Vector3d(
-                                -velocityAtPoint.x * WATER_HORIZONTAL_DAMPING * submergedFraction,
-                                lift - velocityAtPoint.y * WATER_VERTICAL_DAMPING * submergedFraction,
-                                -velocityAtPoint.z * WATER_HORIZONTAL_DAMPING * submergedFraction
-                        );
-                        calculations.addForceAtPoint(relativeToShipCenter, force, tempTorque);
-                    }
+                double submergedFraction = this.getSubmergedFraction(hostWorld, mutablePos, centerWorld);
+                if (submergedFraction > 0D) {
+                    Vector3d relativeToShipCenter = centerWorld.sub(
+                            new Vector3d(transform.getPosX(), transform.getPosY(), transform.getPosZ()),
+                            new Vector3d()
+                    );
+                    Vector3d velocityAtPoint = calculations.getVelocityAtPoint(relativeToShipCenter, new Vector3d());
+                    double lift = buoyancyForce * submergedFraction;
+                    Vector3d force = new Vector3d(
+                            -velocityAtPoint.x * WATER_HORIZONTAL_DAMPING * submergedFraction,
+                            lift - velocityAtPoint.y * WATER_VERTICAL_DAMPING * submergedFraction,
+                            -velocityAtPoint.z * WATER_HORIZONTAL_DAMPING * submergedFraction
+                    );
+                    calculations.addForceAtPoint(relativeToShipCenter, force, tempTorque);
                 }
             }
         }
@@ -243,11 +219,11 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         Set<BlockPos> dirtyCollisionShapePositions = this.ship.getPhysicsData().consumeDirtyCollisionShapePositions();
         boolean blockCountChanged = this.lastBlockCount != this.ship.getBlockPositions().size();
         if (this.firstSync || collisionShapeDirty || (blockCountChanged && dirtyCollisionShapePositions.isEmpty())) {
-            this.rebuildCollisionShapes(this.ship);
+            this.rebuildCollisionShapes();
             this.massPropertiesDirty = true;
         }
         else if (!dirtyCollisionShapePositions.isEmpty()) {
-            this.updateCollisionShapes(this.ship, dirtyCollisionShapePositions);
+            this.updateCollisionShapes(dirtyCollisionShapePositions);
             this.massPropertiesDirty = true;
         }
 
@@ -255,8 +231,8 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         boolean disableGravity = !VSConfig.doGravity || this.ship.isShipAligningToGrid() || calculations.actAsArchimedes;
         this.actor.setActorFlag(PxActorFlagEnum.eDISABLE_GRAVITY, disableGravity);
         this.updateMassPropertiesIfNeeded(calculations);
-        this.actor.setMaxLinearVelocity((float) VSConfig.shipMaxSpeed);
-        this.actor.setMaxAngularVelocity((float) VSConfig.shipMaxAngularSpeed);
+        shipActor.setMaxLinearVelocity((float) VSConfig.shipMaxSpeed);
+        shipActor.setMaxAngularVelocity((float) VSConfig.shipMaxAngularSpeed);
 
         //force actor pose when requested or when COM movement shifted the actor frame.
         boolean forceGameTransform = calculations.setForceToUseGameTransform(false);
@@ -273,8 +249,8 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         //copy game-side linear and angular velocity into PhysX.
         PxVec3 linearVelocity = PhysXActorUtil.toPxVec(calculations.getLinearVelocity());
         PxVec3 angularVelocity = PhysXActorUtil.toPxVec(calculations.getAngularVelocity());
-        this.actor.setLinearVelocity(linearVelocity, true);
-        this.actor.setAngularVelocity(angularVelocity, true);
+        shipActor.setLinearVelocity(linearVelocity, true);
+        shipActor.setAngularVelocity(angularVelocity, true);
         linearVelocity.destroy();
         angularVelocity.destroy();
 
@@ -284,12 +260,12 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         calculations.drainForceAndTorque(shipForce, shipTorque);
         if (shipForce.lengthSquared() > 0) {
             PxVec3 physXForce = PhysXActorUtil.toPxVec(shipForce);
-            this.actor.addForce(physXForce, PxForceModeEnum.eIMPULSE, true);
+            shipActor.addForce(physXForce, PxForceModeEnum.eIMPULSE, true);
             physXForce.destroy();
         }
         if (shipTorque.lengthSquared() > 0) {
             PxVec3 physXTorque = PhysXActorUtil.toPxVec(shipTorque);
-            this.actor.addTorque(physXTorque, PxForceModeEnum.eIMPULSE, true);
+            shipActor.addTorque(physXTorque, PxForceModeEnum.eIMPULSE, true);
             physXTorque.destroy();
         }
         this.firstSync = false;
@@ -297,19 +273,20 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
 
     public void updateAfterSimulation() {
         PhysicsCalculations calculations = this.ship.getPhysicsCalculations();
+        PxRigidDynamic shipActor = (PxRigidDynamic) this.actor;
         PxTransform pose = this.actor.getGlobalPose();
         PxVec3 posePosition = pose.getP();
-        physx.common.PxQuat poseRotation = pose.getQ();
+        PxQuat poseRotation = pose.getQ();
         Vector3d referencePosition = PhysXActorUtil.fromPxVec(posePosition);
         Quaterniond rotation = PhysXActorUtil.fromPxQuat(poseRotation);
 
-        Vector3d centerPosition = this.getReferenceToCenterOfMass(calculations.getPhysCenterOfMass());
+        Vector3d centerPosition = getReferenceToCenterOfMass(this.ship, calculations.getPhysCenterOfMass());
         rotation.transform(centerPosition);
         referencePosition.add(centerPosition, centerPosition);
         centerPosition.y = Math.clamp(centerPosition.y, VSConfig.shipLowerLimit, VSConfig.shipUpperLimit);
 
-        PxVec3 linearVelocity = this.actor.getLinearVelocity();
-        PxVec3 angularVelocity = this.actor.getAngularVelocity();
+        PxVec3 linearVelocity = shipActor.getLinearVelocity();
+        PxVec3 angularVelocity = shipActor.getAngularVelocity();
         Vector3d finalLinearVelocity = PhysXActorUtil.fromPxVec(linearVelocity);
         Vector3d finalAngularVelocity = PhysXActorUtil.fromPxVec(angularVelocity);
 
@@ -340,20 +317,6 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         this.ship.getShipData().getPhysicsData().setLinearVelocity(new Vector3d(calculations.getLinearVelocity()));
     }
 
-    @Override
-    protected void releaseShapes() {
-        for (PxShape shape : this.shapes) this.detachShape(shape);
-        this.shapes.clear();
-        this.shapesByBlock.clear();
-        this.blocksByShape.clear();
-    }
-
-    @Override
-    @NotNull
-    protected PxRigidActor getActor() {
-        return this.actor;
-    }
-
     //fallback for if something bad happened with the physics
     private boolean isPhysicsBroken(PhysicsCalculations calculations) {
         if (calculations.getAngularVelocity().lengthSquared() > 50000
@@ -367,39 +330,25 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         return false;
     }
 
-    private void setCenterOfMassPose(Vector3dc centerOfMass) {
-        // Keep the actor frame anchored to the ship reference; only the PhysX mass frame follows COM.
-        Vector3d localCenterOfMass = this.getReferenceToCenterOfMass(centerOfMass);
-        PxTransform centerOfMassPose = PhysXActorUtil.toPxTransform(
-                localCenterOfMass.x,
-                localCenterOfMass.y,
-                localCenterOfMass.z,
-                new Quaterniond()
-        );
-        this.actor.setCMassLocalPose(centerOfMassPose);
-        centerOfMassPose.destroy();
-    }
-
-    private Vector3d getReferenceToCenterOfMass(Vector3dc centerOfMass) {
-        return new Vector3d(centerOfMass).sub(this.getReferencePositionInShipSpace());
-    }
-
     private void updateMassPropertiesIfNeeded(PhysicsCalculations calculations) {
         float mass = (float) Math.max(this.ship.getInertiaData().getGameTickMass(), 0.0001D);
-        if (!this.massPropertiesDirty && Math.abs(mass - this.lastMass) <= MASS_PROPERTY_EPSILON) return;
+        if (this.massPropertiesInitialized && !this.massPropertiesDirty
+                && Math.abs(mass - this.lastAppliedMass) <= MASS_PROPERTY_EPSILON) return;
+        PxRigidDynamic shipActor = (PxRigidDynamic) this.actor;
 
         //set mass properties
-        Vector3d localCenterOfMass = this.getReferenceToCenterOfMass(calculations.getPhysCenterOfMass());
+        Vector3d localCenterOfMass = getReferenceToCenterOfMass(this.ship, calculations.getPhysCenterOfMass());
         PxVec3 massLocalPose = PhysXActorUtil.toPxVec(localCenterOfMass);
-        boolean updated = PxRigidBodyExt.setMassAndUpdateInertia(this.actor, mass, massLocalPose, false);
+        boolean updated = PxRigidBodyExt.setMassAndUpdateInertia(shipActor, mass, massLocalPose, false);
         massLocalPose.destroy();
         if (!updated) {
-            this.actor.setMass(mass);
-            this.setCenterOfMassPose(calculations.getPhysCenterOfMass());
+            shipActor.setMass(mass);
+            setCenterOfMassPose((PxRigidDynamic) this.actor, this.ship, calculations.getPhysCenterOfMass());
             this.setMassInertia(calculations.getPhysMOITensor());
         }
 
-        this.lastMass = mass;
+        this.lastAppliedMass = mass;
+        this.massPropertiesInitialized = true;
         this.massPropertiesDirty = false;
     }
 
@@ -414,12 +363,6 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
 
         //forces from physics blocks
         if (VSConfig.doPhysicsBlocks) {
-            Queue<IPhysicsBlockController> nodesPriorityQueue = new PriorityQueue<>(this.ship.getPhysicsControllersInShip());
-            while (!nodesPriorityQueue.isEmpty()) {
-                IPhysicsBlockController controller = nodesPriorityQueue.poll();
-                controller.onPhysicsTick(this.ship, calculations, calculations.getPhysicsTimeDeltaPerPhysTick());
-            }
-
             BlockPos.MutableBlockPos mutablePos = new BlockPos.MutableBlockPos();
             if (this.ship.getShipData().activeForcePositions != null) {
                 //iterate over active force positions
@@ -491,21 +434,23 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
     }
 
     //-----collision shape manipulation for ships starts here-----
-    private void rebuildCollisionShapes(PhysicsObject ship) {
-        this.releaseShapes();
+    private void rebuildCollisionShapes() {
+        this.clearShapes();
+        this.shapesByBlock.clear();
+        this.blocksByShape.clear();
 
-        Vector3dc referencePosition = this.getReferencePositionInShipSpace();
-        boolean truncated = !this.attachShipCollisionShapes(ship, ship.getBlockPositions(), referencePosition);
+        Vector3dc referencePosition = getReferencePositionInShipSpace(this.ship);
+        boolean truncated = !this.attachShipCollisionShapes(this.ship.getBlockPositions(), referencePosition);
 
         if (truncated) {
-            System.err.println("PhysX ship " + ship.getName() + " exceeded " + MAX_SHIP_SHAPES
-                + " collision shapes; extra block shapes were skipped in this preliminary backend.");
+            System.err.println("PhysX ship " + this.ship.getName() + " exceeded " + MAX_SHIP_SHAPES
+                    + " collision shapes; extra block shapes were skipped in this preliminary backend.");
         }
-        this.lastBlockCount = ship.getBlockPositions().size();
+        this.lastBlockCount = this.ship.getBlockPositions().size();
     }
 
-    private void updateCollisionShapes(PhysicsObject ship, Set<BlockPos> dirtyPositions) {
-        Vector3dc referencePosition = this.getReferencePositionInShipSpace();
+    private void updateCollisionShapes(Set<BlockPos> dirtyPositions) {
+        Vector3dc referencePosition = getReferencePositionInShipSpace(this.ship);
         Set<BlockPos> affectedPositions = this.expandDirtyCollisionPositions(dirtyPositions);
         Set<PxShape> detachedShapes = Collections.newSetFromMap(new IdentityHashMap<>());
 
@@ -513,21 +458,17 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
             affectedPositions.addAll(this.detachShipShapes(blockPos, detachedShapes));
         }
 
-        boolean truncated = !this.attachShipCollisionShapes(ship, affectedPositions, referencePosition);
+        boolean truncated = !this.attachShipCollisionShapes(affectedPositions, referencePosition);
 
         if (truncated) {
-            System.err.println("PhysX ship " + ship.getName() + " exceeded " + MAX_SHIP_SHAPES
-                + " collision shapes; some dirty block shapes were skipped in this preliminary backend.");
+            System.err.println("PhysX ship " + this.ship.getName() + " exceeded " + MAX_SHIP_SHAPES
+                    + " collision shapes; some dirty block shapes were skipped in this preliminary backend.");
         }
-        this.lastBlockCount = ship.getBlockPositions().size();
+        this.lastBlockCount = this.ship.getBlockPositions().size();
     }
 
     @SuppressWarnings("BooleanMethodIsAlwaysInverted")
-    private boolean attachShipCollisionShapes(
-            PhysicsObject ship,
-            Iterable<BlockPos> blockPositions,
-            Vector3dc referencePosition
-    ) {
+    private boolean attachShipCollisionShapes(Iterable<BlockPos> blockPositions, Vector3dc referencePosition) {
         BlockPos.MutableBlockPos mutablePos = new BlockPos.MutableBlockPos();
         GreedyBlockMerger mergeableBlocks = new GreedyBlockMerger();
         List<ShipBlockCollisionData> separateBlocks = new ArrayList<>();
@@ -535,7 +476,7 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         for (BlockPos blockPos : blockPositions) {
             BlockPos immutablePos = blockPos.toImmutable();
             mutablePos.setPos(immutablePos);
-            IBlockState state = this.getShipBlockState(ship, mutablePos);
+            IBlockState state = this.getShipBlockState(this.ship, mutablePos);
             if (!this.isShipCollisionState(state)) continue;
 
             if (mergeableBlocks.isMergeableFullBlock(state)) {
@@ -546,8 +487,8 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
 
         boolean complete = this.attachMergedShipShapes(mergeableBlocks, referencePosition);
         for (ShipBlockCollisionData block : separateBlocks) {
-            if (this.shapes.size() >= MAX_SHIP_SHAPES) return false;
-            complete &= this.attachShipShapesForBlock(ship, block.pos(), block.state(), referencePosition);
+            if (this.getShapeCount() >= MAX_SHIP_SHAPES) return false;
+            complete &= this.attachShipShapesForBlock(this.ship, block.pos(), block.state(), referencePosition);
         }
         return complete;
     }
@@ -556,7 +497,7 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
     private boolean attachMergedShipShapes(GreedyBlockMerger mergeableBlocks, Vector3dc referencePosition) {
         boolean[] complete = {true};
         mergeableBlocks.forEachMergedBlockBox((box, mergedBlocks) -> {
-            if (this.shapes.size() >= MAX_SHIP_SHAPES) {
+            if (this.getShapeCount() >= MAX_SHIP_SHAPES) {
                 complete[0] = false;
                 return;
             }
@@ -568,15 +509,10 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
     }
 
     @SuppressWarnings("BooleanMethodIsAlwaysInverted")
-    private boolean attachShipShapesForBlock(
-            PhysicsObject ship,
-            BlockPos pos,
-            IBlockState state,
-            Vector3dc referencePosition
-    ) {
+    private boolean attachShipShapesForBlock(PhysicsObject ship, BlockPos pos, IBlockState state, Vector3dc referencePosition) {
         List<AxisAlignedBB> boxes = PhysXBlockSectionBody.getCollisionBoxes(ship.getWorld(), pos, state, false);
         for (AxisAlignedBB box : boxes) {
-            if (this.shapes.size() >= MAX_SHIP_SHAPES) return false;
+            if (this.getShapeCount() >= MAX_SHIP_SHAPES) return false;
 
             PxShape shape = this.attachShipShape(box, referencePosition);
             if (shape != null) this.rememberShipShapeBlocks(shape, List.of(pos.toImmutable()));
@@ -589,7 +525,7 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         PxShape shape = this.createBoxShape(box, this.material);
         if (shape == null) return null;
 
-        PhysXCollisionFilters.CollisionGroup.SHIP.setFilter(shape);
+        PhysXActor.SHIP.setFilter(shape);
         double localX = (box.minX + box.maxX) * 0.5D - referencePosition.x();
         double localY = (box.minY + box.maxY) * 0.5D - referencePosition.y();
         double localZ = (box.minZ + box.maxZ) * 0.5D - referencePosition.z();
@@ -597,9 +533,7 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         shape.setLocalPose(localPose);
         localPose.destroy();
 
-        if (!this.attachShape(shape)) return null;
-
-        this.shapes.add(shape);
+        if (!this.addShape(shape)) return null;
         return shape;
     }
 
@@ -615,7 +549,7 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
 
     private List<BlockPos> detachShipShapes(BlockPos pos, Set<PxShape> detachedShapes) {
         List<PxShape> blockShapes = this.shapesByBlock.get(pos);
-        if (blockShapes == null) return Collections.emptyList();
+        if (blockShapes == null) return List.of();
 
         List<BlockPos> affectedPositions = new ArrayList<>();
         for (PxShape shape : new ArrayList<>(blockShapes)) {
@@ -626,7 +560,7 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
 
     private List<BlockPos> detachShipShape(PxShape shape) {
         List<BlockPos> blockPositions = this.blocksByShape.remove(shape);
-        if (blockPositions == null) blockPositions = Collections.emptyList();
+        if (blockPositions == null) blockPositions = List.of();
 
         for (BlockPos blockPosition : blockPositions) {
             List<PxShape> blockShapes = this.shapesByBlock.get(blockPosition);
@@ -636,8 +570,7 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
             if (blockShapes.isEmpty()) this.shapesByBlock.remove(blockPosition);
         }
 
-        this.detachShape(shape);
-        this.shapes.remove(shape);
+        this.releaseShape(shape);
         return blockPositions;
     }
 
@@ -660,11 +593,12 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
     //-----collision shape manipulation for ships ends here-----
 
     private void setMassInertia(Matrix3dc inertiaTensor) {
+        PxRigidDynamic shipActor = (PxRigidDynamic) this.actor;
         float ix = (float) Math.max(inertiaTensor.m00(), 0.0001D);
         float iy = (float) Math.max(inertiaTensor.m11(), 0.0001D);
         float iz = (float) Math.max(inertiaTensor.m22(), 0.0001D);
         PxVec3 inertia = new PxVec3(ix, iy, iz);
-        this.actor.setMassSpaceInertiaTensor(inertia);
+        shipActor.setMassSpaceInertiaTensor(inertia);
         inertia.destroy();
     }
 
@@ -689,7 +623,7 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         return false;
     }
 
-    private double getWaterSurfaceY(World world, BlockPos.MutableBlockPos mutablePos, Vector3d centerWorld) {
+    private double getSubmergedFraction(@NotNull World world, BlockPos.MutableBlockPos mutablePos, Vector3d centerWorld) {
         int x = (int) Math.floor(centerWorld.x);
         int z = (int) Math.floor(centerWorld.z);
         int minY = Math.max(0, (int) Math.floor(centerWorld.y - BLOCK_HALF_EXTENT - 0.25D));
@@ -697,12 +631,48 @@ public class PhysXShipBody extends AbstractPhysXCollisionObject {
         for (int y = maxY; y >= minY; y--) {
             mutablePos.setPos(x, y, z);
             if (PhysicsUtils.isLiquid(world.getBlockState(mutablePos))) {
-                return y + 1D;
+                double waterSurfaceY = y + 1D;
+                return Math.clamp(waterSurfaceY - (centerWorld.y - BLOCK_HALF_EXTENT), 0D, 1D);
             }
         }
-        return Double.NaN;
+        return 0D;
     }
 
+    //---static helpers---
+    private static void setCenterOfMassPose(@NotNull PxRigidDynamic actor, @NotNull PhysicsObject ship, @NotNull Vector3dc centerOfMass) {
+        // Keep the actor frame anchored to the ship reference; only the PhysX mass frame follows COM.
+        Vector3d localCenterOfMass = getReferenceToCenterOfMass(ship, centerOfMass);
+        PxTransform centerOfMassPose = PhysXActorUtil.toPxTransform(
+                localCenterOfMass.x,
+                localCenterOfMass.y,
+                localCenterOfMass.z,
+                new Quaterniond()
+        );
+        actor.setCMassLocalPose(centerOfMassPose);
+        centerOfMassPose.destroy();
+    }
+
+    private static Vector3d getReferenceToCenterOfMass(@NotNull PhysicsObject ship, @NotNull Vector3dc centerOfMass) {
+        return new Vector3d(centerOfMass).sub(getReferencePositionInShipSpace(ship));
+    }
+
+    private static PxTransform createActorPose(@NotNull PhysicsObject ship, @NotNull ShipTransform transform) {
+        Vector3d referencePosition = getReferencePositionInShipSpace(ship);
+        transform.transformPosition(referencePosition, TransformType.SUBSPACE_TO_GLOBAL);
+        return PhysXActorUtil.toPxTransform(
+                referencePosition.x,
+                referencePosition.y,
+                referencePosition.z,
+                transform.rotationQuaternion(TransformType.SUBSPACE_TO_GLOBAL)
+        );
+    }
+
+    private static Vector3d getReferencePositionInShipSpace(@NotNull PhysicsObject ship) {
+        BlockPos reference = ship.getReferenceBlockPos();
+        return new Vector3d(reference.getX(), reference.getY(), reference.getZ());
+    }
+
+    //---other classes---
     private record ShipBlockCollisionData(BlockPos pos, IBlockState state) {}
 
     public static final class Identifier extends AbstractPhysXCollisionObject.Identifier {
